@@ -568,6 +568,8 @@ int main(int argc, char **argv)
 		suggest_laptop_mode();
 		suggest_hpet();
 		suggest_ac97_powersave();
+		suggest_wireless_powersave();
+
 
 		pick_suggestion();
 		show_title_bar();
